fix: mobile spacing on phonetic input section

--- a/src/assets/scss/components/_phonetic-input.scss
+++ b/src/assets/scss/components/_phonetic-input.scss
@@ -60,7 +60,8 @@ section.phonetic-input {
             background: $blue;
             padding: 3px 0 5px;
             border-radius: 2px;
-            text-shadow: 0px 0px 15px rgba(43, 43, 43, 0.15)
+            text-shadow: 0px 0px 15px rgba(43, 43, 43, 0.15);
+            margin: 6px 0;
         }
     }
 
